# hedgehog-bot

./: .gitignore  Cargo.toml
assets/translations/: ru-RU.ftl
migrations/2024-05-28-195405_create_users/: up.sql
src/: main.rs  models.rs  schema.rs  translations.rs  utils.rs
src/boosty_api/: auth.rs  mod.rs
src/boosty_api/types/: auth.rs  mod.rs  subscribers.rs
src/commands/: mod.rs
src/db/: mod.rs  users.rs
src/handlers/: mod.rs
