[package]
name = "hedgehog-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "nightly"] }
tokio = {version =  "1.37", features = ["rt-multi-thread", "macros"]}
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"]}
intl-memoizer = "0.5"
toml = "0.8"
