[package]
name = "hedgehog-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = ["macros"] }
tokio = {version =  "1.37", features = ["rt-multi-thread", "macros"]}
hyper-rustls = { version = "0.19.0-alpha.3" }
reqwest = { version = "^0.12", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"]}
intl-memoizer = "0.5"
toml = "0.8"
diesel = { version = "2.1", features = ["chrono"] }
chrono = "0.4"
diesel-async = { version = "0.4", features = ["postgres", "bb8"]}
bb8 = "0.8"
regex = "1.10.5"
